# HKW-Tools_Qt

./: CMakeLists.txt  Debuger.cpp  Dlg_Loading.cpp  Dlg_Loading.h  Dlg_Loading.ui  Frm_ConnectDevice.cpp  Frm_ConnectDevice.h  Frm_ConnectDevice.ui  Frm_GetIP.cpp  Frm_GetIP.h  Frm_GetIP.ui  Frm_InstallApp.cpp  Frm_InstallApp.h  Frm_InstallApp.ui  Frm_Main.cpp  Frm_Main.h  Frm_Main.ui  HKW-Tools.pro  HKW-Tools.qrc  HKW-Tools.sln  HKW_Tools.h  JMessageBox.cpp  JMessageBox.h  README.md  main.cpp
HKW-Tools/: Frm_InstallApp.cpp  Frm_InstallApp.h  Frm_InstallApp.ui  Frm_Main.cpp  Frm_Main.h  Frm_Main.qrc  Frm_Main.ui  HKW-Tools.aps  HKW-Tools.rc  HKW-Tools.vcxproj  HKW-Tools.vcxproj.filters  HKW_Tools.h  SyncDevicesThread.cpp  SyncDevicesThread.h  main.cpp
HKW-Tools/HKW_Tools/Core/: ADB.h  Terminal.h
HKW-Tools/HKW_Tools/Core/ADB/Device/: Device.cpp
HKW-Tools/HKW_Tools/Core/ADB/Server/: Server.cpp
HKW-Tools/HKW_Tools/Core/Terminal/: Terminal.cpp
HKW-Tools/HKW_Tools/Data/: ErrMessage.h
HKW-Tools/HKW_Tools/Data/CmdResult/: CmdResult.cpp
HKW-Tools/x64/Debug/: HKW-Tools.exe.recipe  vc143.idb
HKW-Tools/x64/Debug/HKW-Tools.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  HKW-Tools.lastbuildstate  HKW-Tools.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  moc.read.1u.tlog  moc.write.1u.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog  rcc.read.1u.tlog  rcc.write.1u.tlog  uic.read.1u.tlog  uic.write.1u.tlog
HKW-Tools/x64/Debug/moc/: moc_Frm_InstallApp.cpp  moc_Frm_Main.cpp  moc_SyncDevicesThread.cpp
HKW-Tools/x64/Debug/rcc/: qrc_Frm_Main.cpp
HKW-Tools/x64/Debug/uic/: ui_Frm_InstallApp.h  ui_Frm_Main.h
HKW-Tools/x64/Release/: HKW-Tools.exe.recipe  HKW-Tools.iobj  HKW-Tools.ipdb
HKW-Tools/x64/Release/HKW-Tools.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  HKW-Tools.lastbuildstate  HKW-Tools.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  moc.read.1u.tlog  moc.write.1u.tlog  rc.command.1.tlog  rc.write.1.tlog  rcc.write.1u.tlog  uic.write.1u.tlog
HKW-Tools/x64/Release/moc/: moc_Frm_InstallApp.cpp  moc_Frm_Main.cpp  moc_SyncDevicesThread.cpp
HKW-Tools/x64/Release/uic/: ui_Frm_InstallApp.h  ui_Frm_Main.h
HKW_Tools/: ADB.h  CmdResult.h  StringBox.h  Terminal.h
HKW_Tools/ADB/App/: App.cpp
HKW_Tools/ADB/Device/: Device.cpp
HKW_Tools/ADB/Server/: Server.cpp
HKW_Tools/Core/: ADB.h  Terminal.h
HKW_Tools/Core/ADB/App/: App.cpp
HKW_Tools/Core/ADB/Device/: Device.cpp
HKW_Tools/Core/Terminal/: Terminal.cpp
HKW_Tools/Data/: ErrMessage.h
HKW_Tools/Data/CmdResult/: CmdResult.cpp
HKW_Tools/Data/StringBox/: StringBox.cpp
HKW_Tools/ErrMessage/: ErrMessage.cpp
HKW_Tools/StringBox/: StringBox.cpp
HKW_Tools/Terminal/: Terminal.cpp
x64/Release/: log.txt
